--- a/index.html
+++ b/index.html
@@ -367,18 +367,14 @@
         </ul>
         
 
-
-        <div class="tab-content px-5" id="pills-tabContent">
-
+        <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                 <div class="row mt-4">
+                    <!-- Konten tab dalam bentuk kartu -->
                     <div class="col-lg-6">
-                        <div class="mb-5">
-                            <div class="d-flex mb-3">
-                                <img class="img-fluid" src="img/grafic/news3.jpg"
-                                    style="width: 35%; height: 100px; object-fit: cover;" alt="">
-                                <a href="" class="align-items-center bg-secondary text-dark text-decoration-none px-3"
-                                    style="height: 100px; width: 100%;">
+                        <div class="card mb-3">
+                            <img src="img/grafic/news3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
                                     Governu inaugura sistema Irrigasaun iha Munisipiu Baucau no distribui tratór
                                     agríkola
                                     sira iha Munisipiu Viqueque
