--- a/info.html
+++ b/info.html
@@ -13,7 +13,8 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -23,7 +24,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="css/mycss.css">
 </head>
 
@@ -62,11 +63,11 @@
     <!-- Topbar End -->
 
 
-        <!-- Navbar Start -->
-        <div class="container-fluid p-0">
+    <!-- Navbar Start -->
+    <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-sm bg-light navbar-light py-2 py-lg-0 px-lg-5">
             <a href="http://www.gov.tl/" class="navbar-brand ml-lg-3 ml-md-3 ml-sm-3">
-              <img src="/icon/GOV-TL3.png" style="width: 170px;">
+                <img src="/icon/GOV-TL3.png" style="width: 170px;">
             </a>
 
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -141,177 +142,185 @@
 
                 </div>
             </div>
-            <button  class="btn rounded text-light" style="background-color: rgb(137, 24, 24);">
-                <a href="https://portal.municipio.gov.tl/balkaun-uniku/" target="_blank" class="text-decoration-none text-light"><i class="fas fa-assistive-listening-systems"></i> BALKAUN UNIKU</a>
-             </button>
+            <button class="btn rounded text-light" style="background-color: rgb(137, 24, 24);">
+                <a href="https://portal.municipio.gov.tl/balkaun-uniku/" target="_blank"
+                    class="text-decoration-none text-light"><i class="fas fa-assistive-listening-systems"></i> BALKAUN
+                    UNIKU</a>
+            </button>
         </nav>
     </div>
-        <!-- Navbar End -->
+    <!-- Navbar End -->
 
-        <div class="jumtais">
-            <i class="fas fa-7x fa-search-location text-light p-5"><h2 style="color: white;">LIÑA INFORMASAUN</h2></i>
-        </div>
+    <div class="jumtais">
+        <i class="fas fa-7x fa-search-location text-light p-5">
+            <h2 style="color: white;">LIÑA INFORMASAUN</h2>
+        </i>
+    </div>
 
 
     <!-- Contact Start -->
-        <div class="row p-5 col-12">
-            <div class="col-lg-3">
-                <div class="bg-primary text-center p-4">
-                    <h6 class="m-0 text-white"><i class="fa fa-map-marker-alt text-white mr-2"></i>123 Street, Palacio do Governo, DILI, Timor-Leste</h6>
-                </div> <br>
+    <div class="row p-5 col-12">
+        <div class="col-lg-3">
+            <div class="bg-primary text-center p-4">
+                <h6 class="m-0 text-white"><i class="fa fa-map-marker-alt text-white mr-2"></i>123 Street, Palacio do
+                    Governo, DILI, Timor-Leste</h6>
+            </div> <br>
 
-                <div class="bg-primary text-center p-4">
-                    <h6 class="m-0 text-white"><i class="fa fa-map-marker-alt text-white mr-2"></i>Monday - Friday:
+            <div class="bg-primary text-center p-4">
+                <h6 class="m-0 text-white"><i class="fa fa-map-marker-alt text-white mr-2"></i>Monday - Friday:
                     9:00am to 6:00pm
                     Closed on Saturdays, Sundays and Public Holidays</h6>
-                </div>
-            </div>
-
-            <div class="col-lg-9">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1641.3410698495093!2d125.57798154732995!3d-8.559098029529858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d01e700275f4e0b%3A0x31d0cc32dbd43cd5!2sAjensia%20TIC%20TIMOR%20IP!5e1!3m2!1sen!2sbd!4v1713340123729!5m2!1sen!2sbd" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-     <hr> <br>
+
+        <div class="col-lg-9">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1641.3410698495093!2d125.57798154732995!3d-8.559098029529858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d01e700275f4e0b%3A0x31d0cc32dbd43cd5!2sAjensia%20TIC%20TIMOR%20IP!5e1!3m2!1sen!2sbd!4v1713340123729!5m2!1sen!2sbd"
+                width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+    <hr> <br>
     <!-- Contact End -->
 
     <!-- <div class="container-fluid"> -->
-        <div class="row p-5 col-12">
-            <div class="col-lg-6">
-                <h4>Númeru Badak</h4> 
-                <p>Ba emerjénsia sira, favór bolu númeru relevante sira:</p> <br>
+    <div class="row p-5 col-12">
+        <div class="col-lg-6">
+            <h4>Númeru Badak</h4>
+            <p>Ba emerjénsia sira, favór bolu númeru relevante sira:</p> <br>
 
-                <h6>Bombeiros :  </h6> <br>
-                <h6>Policia : </h6> <br>
+            <h6>Bombeiros : </h6> <br>
+            <h6>Policia : </h6> <br>
 
-                <h6>Ambulancia : </h6> <br>
-                <h6>Emergencia : </h6> <br>
+            <h6>Ambulancia : </h6> <br>
+            <h6>Emergencia : </h6> <br>
 
-                <h6>Sentru Saude : </h6> <br>
-                <h6>Liga Inan : </h6> <br>
+            <h6>Sentru Saude : </h6> <br>
+            <h6>Liga Inan : </h6> <br>
 
-                <h6>Ajuda husi Ministeriu Publiku : </h6> <br>
-                <h6>Ajuda husi Ministeriu Justisa : </h6> <br>
+            <h6>Ajuda husi Ministeriu Publiku : </h6> <br>
+            <h6>Ajuda husi Ministeriu Justisa : </h6> <br>
 
-                <h6>The Central Dispatching Services : </h6> <br>
-                <h6>Weather : </h6> <br>
-            </div>
-
-            <div class="col-lg-6">
-                <h4>Kontaktu</h4> 
-                <p>Ba emerjénsia sira, favór bolu númeru relevante sira:</p> <br>
-
-                <h6>Balkaun Uniku : +670</h6> <br>
-                <h6>Portal Munisipal : +670</h6> <br>
-
-                <h6>Ministerio Finansas : +670</h6> <br>
-                <h6>Servisu Notariado : +670</h6> <br>
-
-                <h6>Servisu Migrasaun : +670</h6> <br>
-                <h6>Servisu Impostu : +670</h6> <br>
-
-                <h6>Servisu Agricultura : +670</h6> <br>
-                <h6>Servisu Saude : +670</h6> <br>
-
-                <h6>Servisu ICT : +670</h6> <br>
-                <h6>Servisu Tributaria : +670</h6> <br>
-            </div>
+            <h6>The Central Dispatching Services : </h6> <br>
+            <h6>Weather : </h6> <br>
         </div>
+
+        <div class="col-lg-6">
+            <h4>Kontaktu</h4>
+            <p>Ba emerjénsia sira, favór bolu númeru relevante sira:</p> <br>
+
+            <h6>Balkaun Uniku : +670</h6> <br>
+            <h6>Portal Munisipal : +670</h6> <br>
+
+            <h6>Ministerio Finansas : +670</h6> <br>
+            <h6>Servisu Notariado : +670</h6> <br>
+
+            <h6>Servisu Migrasaun : +670</h6> <br>
+            <h6>Servisu Impostu : +670</h6> <br>
+
+            <h6>Servisu Agricultura : +670</h6> <br>
+            <h6>Servisu Saude : +670</h6> <br>
+
+            <h6>Servisu ICT : +670</h6> <br>
+            <h6>Servisu Tributaria : +670</h6> <br>
+        </div>
+    </div>
     <!-- </div> -->
 
-</div>
-</div> <br>
-
-
-
-
-
-<!-- Footer Start -->
-<div class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5 p-3">
-    <div class="row">
-        <div class="col-md-3 mb-4">
-            <p></p>
-            <h3 class="text-primary mb-4">Get In Touch</h3>
-            <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
-            <div class="d-flex justify-content-start mt-4">
-                <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-        </div>
-        <div class="col-md-3 mb-5">
-            <p></p>
-            <h3 class="text-primary mb-4">Services</h3>
-            <div class="d-flex flex-column justify-content-start">
-                <a href="#" class="text-white mb-2"><i class="fa fa-angle-right mr-2"></i><i
-                        class="fas fa-passport"></i> Citizenship</a>
-                <a href="#" class="text-white mb-2"><i class="fa fa-angle-right mr-2"></i><i
-                        class="fas fa-archive"></i> Archive</a>
-
-            </div>
-        </div>
-        <div class="col-md-3 mb-5">
-            <p></p>
-            <h3 class="text-primary mb-4">Services</h3>
-            <div class="d-flex flex-column justify-content-start">
-                <a href="#" class="text-white mb-2"><i class="fa fa-angle-right mr-2"></i><i
-                        class="fas fa-passport"></i> Citizenship</a>
-                <a href="#" class="text-white mb-2"><i class="fa fa-angle-right mr-2"></i><i
-                        class="fas fa-archive"></i> Archive</a>
-
-            </div>
-        </div>
-        <div class="col-md-3 mb-5">
-            <p></p>
-            <h3 class="text-primary mb-4">Services</h3>
-            <div class="d-flex justify-content-start mt-0">
-                <a href="javascript:void(0)" class="m-b-20"><img src="icon/Google-Play-button.svg"></a>
-            </div>
-        </div>
     </div>
-</div>
+    </div> <br>
 
 
-<div class="container-fluid  bg-dark text-white border-top py-4 px-sm-3 px-md-5 "
-    style="border-color: #3E3E4E !important;">
-    <div class="row">
-        <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-            <p class="m-0 text-white">&copy; <a href="#">GOV.TL.</a> Developed & Hosted by
 
-                <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                <a href="tic.gov.tl"> TIC TIMOR I.P</a>
-            </p>
-        </div>
-        <div class="col-lg-6 text-center text-md-right">
-            <ul class="nav d-inline-flex">
-                <div class="d-flex justify-content-start mt-0">
-                    <a class="btn btn-outline-light btn-social mr-5" href="#"><i class="fab fa-android"></i></a>
+
+
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-white mt-5 py-5 px-sm-3 px-md-5 p-3">
+        <div class="row">
+            <div class="col-md-3 mb-4">
+                <p></p>
+                <h3 class="text-primary mb-4">Get In Touch</h3>
+                <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                <div class="d-flex justify-content-start mt-4">
+                    <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-outline-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
                 </div>
-            </ul>
+            </div>
+            <div class="col-md-3 mb-5">
+                <p></p>
+                <h3 class="text-primary mb-4">Services</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a href="#" class="text-white mb-2"><i class="fa fa-angle-right mr-2"></i><i
+                            class="fas fa-passport"></i> Citizenship</a>
+                    <a href="#" class="text-white mb-2"><i class="fa fa-angle-right mr-2"></i><i
+                            class="fas fa-archive"></i> Archive</a>
+
+                </div>
+            </div>
+            <div class="col-md-3 mb-5">
+                <p></p>
+                <h3 class="text-primary mb-4">Services</h3>
+                <div class="d-flex flex-column justify-content-start">
+                    <a href="#" class="text-white mb-2"><i class="fa fa-angle-right mr-2"></i><i
+                            class="fas fa-passport"></i> Citizenship</a>
+                    <a href="#" class="text-white mb-2"><i class="fa fa-angle-right mr-2"></i><i
+                            class="fas fa-archive"></i> Archive</a>
+
+                </div>
+            </div>
+            <div class="col-md-3 mb-5">
+                <p></p>
+                <h3 class="text-primary mb-4">Services</h3>
+                <div class="d-flex justify-content-start mt-0">
+                    <a href="javascript:void(0)" class="m-b-20"><img src="icon/Google-Play-button.svg"></a>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<!-- Footer End -->
 
 
-<!-- Back to Top -->
-<a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
+    <div class="container-fluid  bg-dark text-white border-top py-4 px-sm-3 px-md-5 "
+        style="border-color: #3E3E4E !important;">
+        <div class="row">
+            <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
+                <p class="m-0 text-white">&copy; <a href="#">GOV.TL.</a> Developed & Hosted by
+
+                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                    <a href="tic.gov.tl"> TIC TIMOR I.P</a>
+                </p>
+            </div>
+            <div class="col-lg-6 text-center text-md-right">
+                <ul class="nav d-inline-flex">
+                    <div class="d-flex justify-content-start mt-0">
+                        <a class="btn btn-outline-light btn-social mr-5" href="#"><i class="fab fa-android"></i></a>
+                    </div>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- Footer End -->
 
 
-<!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/counterup/counterup.min.js"></script>
-<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
-<!-- Contact Javascript File -->
-<script src="mail/jqBootstrapValidation.min.js"></script>
-<script src="mail/contact.js"></script>
 
-<!-- Template Javascript -->
-<script src="js/main.js"></script>
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+    <!-- Contact Javascript File -->
+    <script src="mail/jqBootstrapValidation.min.js"></script>
+    <script src="mail/contact.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
