--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     UNIKU</a>
             </button>
         </nav>
-        <ul class="nav justify-content-between d-lg-none fixed-bottom bg-white py-1">
+        <!-- <ul class="nav justify-content-between d-lg-none fixed-bottom bg-white py-1">
             <li class="nav-item">
                 <a class="nav-link text-center text-dark" style="font-size: 12px;" href="#">
                     <div class="mb-1">
@@ -196,7 +196,7 @@
                     Informasaun
                 </a>
             </li>
-        </ul>
+        </ul> -->
     </div>
     <!-- Navbar End -->
 
@@ -269,7 +269,7 @@
         <h5 class="text-center mb-2 rounded bg-danger p-1 text-light">SERVISUS</h5>
     </div>
 
-    <div class="p-3 p-lg-4">
+    <div class="py-3 px-0 p-lg-4">
         <div class="owl-carousel owl-theme">
             <div class="item">
                 <a class="text-decoration-none text-light" href="detileservices">
